--- a/maintenance.html
+++ b/maintenance.html
@@ -18,39 +18,50 @@
 
         <!--=============== CSS ===============-->
         <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor' crossorigin='anonymous'>
-        <link rel="stylesheet" href="css/home.css">
 
         <!--=============== TITLE ===============-->
-        <title>Home - IX-14</title> 
+        <title>Under Maintenance - IX-14</title> 
 
         <!--=============== FONT ===============-->
         <link rel='preconnect' href='https://fonts.gstatic.com'>
   </head>
-<body>
-  <div id="container">
-    <div class="mbox">
-    <div id="maze">
-      <div id="thingie">
-        <div class="emo" id="emo">🥺</div>
-      </div>
-      <div id="home">
-        <div class="emo">🏠</div>
-      </div>
-      <div class="barrier" id="top"></div>
-      <div class="barrier" id="bottom"></div>
-    </div>
-      </div>
-    <div class="controls">
-      <div class="buttons">
-        <button class="btn" id="bu"><div class="chevron">↑</div></button>
-        <button class="btn" id="bd"><div class="chevron">↓</div></button>
-        <button class="btn" id="bl"><div class="chevron">←</div></button>
-        <button class="btn" id="br"><div class="chevron">→</div></button>
-      </div>
-    </div>
-  </div>
-<body>
-
-<script src="js/home.js"></script>
-<script>window.location.replace('https://ix14.netlify.app/maintenance'); </script>
+  <style>
+    header > img {
+      margin: 48px 120px
+    }
+    main {
+      font-family: Oxygen, Arial, sans-serif;
+      margin: auto;
+      text-align: center;
+    }
+    h1 {
+      font-size: 24px;
+      line-height: 130%;
+      margin-bottom: 1.25rem;
+    }
+    p {
+      color: #323239;
+      font-size: 18px;
+      font-weight: 200;
+      line-height: 22px;
+      margin: 0 auto 1rem auto;
+      max-width: 412px;
+    }
+    p > a {
+      color: #323239;
+      font-weight: bold;
+      
+    }
+  </style>
+  <body>
+    <main>
+      <img src="https://d12v9rtnomnebu.cloudfront.net/error_page/images/under_maintenance_image_x2.png" alt="Maintenance Gears" width="450">
+      <h1>We are temporarily under maintenance.</h1>
+      <p>We are currently undergoing scheduled mainenance. Please try again shortly.</p>
+      <p>
+        If you have any questions, please contact 
+        <a href="https://api.whatsapp.com/send?phone=+6287742824377">web developer</a>
+      </p>
+    </main>
+  </body>
 </html>
