--- a/maintenance.html
+++ b/maintenance.html
@@ -60,7 +60,7 @@
       <p>We are currently undergoing scheduled mainenance. Please try again shortly.</p>
       <p>
         If you have any questions, please contact 
-        <a href="https://api.whatsapp.com/send?phone=+6287742824377&text=">web developer</a>
+        <a href="https://api.whatsapp.com/send?phone=+6287742824377&text=%20">web developer</a>
       </p>
     </main>
   </body>
