--- a/ez/main.html
+++ b/ez/main.html
@@ -36,7 +36,7 @@
 
   <main id="main">
 
-  <!-- Vendor JS Files -->
+  <!-- Vendor JS Files -5->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
