--- a/exam/index.html
+++ b/exam/index.html
@@ -190,6 +190,7 @@
                   document.getElementById('second').innerHTML = '0'; }
           }, 1000);
           </script>
+      </div>
       <hr>
 
       <!--=== Matematika ===-->
@@ -372,11 +373,11 @@
     document.getElementById('secondba').innerHTML = secondsba;
     if (tba < 0) {
             clearInterval(xba);
-            document.getElementById('mulaib').innerHTML = 'UJIAN BIOLOGI DAH BERAKHIR!';
-            document.getElementById('dayb').innerHTML ='0';
-            document.getElementById('hourb').innerHTML ='0';
-            document.getElementById('minuteb').innerHTML ='0' ;
-            document.getElementById('secondb').innerHTML = '0'; }
+            document.getElementById('mulaiba').innerHTML = 'UJIAN BIOLOGI DAH BERAKHIR!';
+            document.getElementById('dayba').innerHTML ='0';
+            document.getElementById('hourba').innerHTML ='0';
+            document.getElementById('minuteba').innerHTML ='0' ;
+            document.getElementById('secondba').innerHTML = '0'; }
     }, 1000);
     </script>
     </div>
@@ -706,8 +707,8 @@
     document.getElementById('houriak').innerHTML = hoursiak;
     document.getElementById('minuteiak').innerHTML = minutesiak;
     document.getElementById('secondiak').innerHTML = secondsiak;
-    if (tia < 0) {
-            clearInterval(xia);
+    if (tiak < 0) {
+            clearInterval(xiak);
             document.getElementById('mulaiiak').innerHTML = 'COUNTDOWN TELAH BERAKHIR, CONGRATS TO ALL! 🎉🎉';
             document.getElementById('dayiak').innerHTML ='0';
             document.getElementById('houriak').innerHTML ='0';
