--- a/14K/main.html
+++ b/14K/main.html
@@ -70,7 +70,7 @@
                                 <input type="text" name="Tanggal" id="tanggal" class="form-control" readonly required>
                             </div>
                             <div class="mb-3">
-                                <label for="nama" class="form-label">Nama <span style="color: red;">*</span> </label>
+                                <label for="nama" class="form-label">Nama Lengkap <span style="color: red;">*</span> </label>
                                 <input type="text" name="Nama Lengkap" id="nama_lengkap" onblur="mycapitalized()" class="form-control" required>
                             </div>
                             <div class="mb-3">
@@ -125,7 +125,6 @@
       </div>
 
       <!--=============== SCRIPT ===============-->
-      <script>window.location.replace('https://ix14.netlify.app/maintenance'); </script>
       <script src="dist/sweetalert2.all.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
