--- a/14K/main.html
+++ b/14K/main.html
@@ -210,5 +210,6 @@
         var id = 'IX-14_' + id
         document.getElementById("id").value = id;
       </script>
+      <script></script>
 </body>
 </html>
