--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 
         <!--=============== CSS ===============-->
         <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor' crossorigin='anonymous'>
-        <link rel="stylesheet" href="css/home.css">
+        <link rel="stylesheet" href="css/">
 
         <!--=============== TITLE ===============-->
         <title>Home - IX-14</title> 
@@ -27,29 +27,5 @@
         <link rel='preconnect' href='https://fonts.gstatic.com'>
   </head>
 <body>
-  <div id="container">
-    <div class="mbox">
-    <div id="maze">
-      <div id="thingie">
-        <div class="emo" id="emo">🥺</div>
-      </div>
-      <div id="home">
-        <div class="emo">🏠</div>
-      </div>
-      <div class="barrier" id="top"></div>
-      <div class="barrier" id="bottom"></div>
-    </div>
-      </div>
-    <div class="controls">
-      <div class="buttons">
-        <button class="btn" id="bu"><div class="chevron">↑</div></button>
-        <button class="btn" id="bd"><div class="chevron">↓</div></button>
-        <button class="btn" id="bl"><div class="chevron">←</div></button>
-        <button class="btn" id="br"><div class="chevron">→</div></button>
-      </div>
-    </div>
-  </div>
-<body>
-
-<script src="js/home.js"></script>
+</body>
 </html>
