--- a/home.html
+++ b/home.html
@@ -22,7 +22,6 @@
       rel="stylesheet"
       href='https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap"rel="stylesheet'
     />
-    <link rel="stylesheet" href="./styles/styles.css" />
 
     <!--=============== TITLE ===============-->
     <title>Home - IX-14</title>
@@ -41,7 +40,7 @@
         <input type="text" class="form-control" id="input-google">
       </div>
       <div class="col-auto">
-        <button type="submit" class="btn btn-primary mb-3">search</button>
+        <button type="submit" class="btn btn-primary mb-3" function="gugel">search</button>
       </div>
 
       <script>
