--- a/home.html
+++ b/home.html
@@ -29,22 +29,92 @@
   <body>
     
     <div class="container" style="padding-top: 100px"> 
-        <div class="alert alert-warning" role="alert">
-
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            <h4 class="alert-heading">Hi 👋</h4>
-            <hr>
-            <p class="mb-0 uppercase">Welcome to IX-14's site.</p>
-            
-        </div>
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+      <body class="d-flex flex-column h-100">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow shadow-sm fixed-top">
+            <div class="container px-5">
+                <a class="navbar-brand" href="#!">
+                    <img src="https://portal-snpmb.bppp.kemdikbud.go.id/assets/media/img/logo-snpmb.png" alt="logo" height="50">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <a class="btn btn-outline-primary ms-auto d-lg-inline-block my-2 my-md-0"
+                       href="https://portal-snpmb.bppp.kemdikbud.go.id/dashboard">Masuk</a>
+                </div>
+            </div>
+        </nav>
+        <section class="py-5 mt-5">
+            <div class="container px-5">
+                <div class="row d-flex align-items-center">
+                    <div class="col-lg-6">
+                        <h1 class="display-5 fw-bold my-3">Raih masa depanmu di Portal SNPMB</h1>
+                        <div class="row gap-3 gap-lg-0">
+                            <div class="col-lg-12">
+                                <p class="lead">Belum memiliki akun SNPMB? Daftar segera di sini.</p>
+                                <a class="btn btn-primary px-4" href="https://reg-snpmb.bppp.kemdikbud.go.id/">Daftar</a>
+                            </div>
+                            <div class="col-12 mt-2 d-lg-none">
+                                <hr class="my-0">
+                            </div>
+                            <div class="col-lg-12 d-lg-none">
+                                <p class="lead">Sudah memiliki akun SNPMB?</p>
+                                <a class="btn btn-outline-primary px-4" href="https://portal-snpmb.bppp.kemdikbud.go.id/dashboard">Masuk</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 text-center d-none d-lg-inline-flex justify-content-center">
+                        <img src="https://portal-snpmb.bppp.kemdikbud.go.id/assets/media/img/illustration-landing.png" alt="landing-img" width="350"
+                             class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-light d-none">
+            <div class="container py-4 text-center">
+            </div>
+        </section>
+        <section class="border-top w-100">
+            <div class="container px-5 mt-5">
+                <div class="row">
+                    <div class="col-9 col-lg-11 mb-3">
+                        <h3>Pengumuman</h3>
+                    </div>
+                    <div class="col-3 col-lg-1 mb-3 text-right">
+                        <button type="button" class="btn btn-sm btn-outline-dark" data-bs-slide="prev"
+                                data-bs-target="#carouselExampleCaptions">
+                            <i class="fa fa-angle-left"></i>
+                        </button>
+                        <button type="button" class="btn btn-sm btn-outline-dark" data-bs-slide="next"
+                                data-bs-target="#carouselExampleCaptions">
+                            <i class="fa fa-angle-right"></i>
+                        </button>
+                    </div>
+                    <div class="col-lg-12 mt-10">
+                        <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <h5>Registrasi Akun SNPMB 2023</h5>
+                                    <p>Pembuatan Akun SNPMB bagi Sekolah dan Siswa dimulai pada 09 Januari 2023, pukul 15.00 WIB pada laman <a href="https://portal-snpmb.bppp.kemdikbud.go.id">Portal SNPMB</a>.</p>
+                                    <p>Sekolah dan Siswa yang sudah mengikuti uji coba kedua/lanjutan pembuatan Akun SNPMB dan berhasil, tidak perlu membuat akun SNPMB lagi.</p>
+                                    <p>Pembuatan Akun SNPMB berakhir pada: 09 Februari 2023 bagi Sekolah, dan 15 Februari 2023 bagi Siswa.</p>
+                                    <p>Terima kasih</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="footer mt-auto py-3 bg-light border-top">
+            <div class="container px-5">
+                <p class="m-0 text-muted">
+                    &copy; 2023 Balai Pengelolaan Pengujian Pendidikan. <em>v1.0.2p</em>.
+                    <a href="https://storyset.com/online" class="text-muted text-decoration-none">Ilustrasi oleh Storyset</a>.
+                </p>
+            </div>
+        </footer>
+        <script src="https://portal-snpmb.bppp.kemdikbud.go.id/assets/plugins/bootstrap5/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
