--- a/home.html
+++ b/home.html
@@ -105,6 +105,8 @@
                 </p>
             </div>
         </footer>
+
+        <!--=============== Script ===============-->
         <script src="https://portal-snpmb.bppp.kemdikbud.go.id/assets/plugins/bootstrap5/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
