--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <link rel='shortcut icon' href='a/icon.png' type='image/x-icon'>
 
         <!--=============== REMIX ICONS ===============-->
-        <link href='https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css' rel='stylesheet'>
+        <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css' rel='stylesheet'>
 
         <!--=============== CSS ===============-->
         <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor' crossorigin='anonymous'>
@@ -30,18 +30,21 @@
     
     <div class="container" style="padding-top: 100px"> 
       <body class="d-flex flex-column h-100">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow shadow-sm fixed-top">
+        <nav class="navbar navbar-expand-lg fixed-top static-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#!">
-                    <img src="https://portal-snpmb.bppp.kemdikbud.go.id/assets/media/img/logo-snpmb.png" alt="logo" height="50">
+                <a class="navbar-brand" href="">
+                    <p class="display-6 fw-bold my-3">IX-14</p>
                 </a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <a class="btn btn-outline-primary ms-auto d-lg-inline-block my-2 my-md-0"
-                       href="https://portal-snpmb.bppp.kemdikbud.go.id/dashboard">Masuk</a>
+                    <a class="display-7 my-3 ms-auto" style="color: black; text-decoration: none; size: 15px;">
+                        <i class="fa-brands fa-instagram" style="size: 200px;"></i> @ix14.agenda
+                    </a>
                 </div>
             </div>
         </nav>
@@ -49,62 +52,23 @@
             <div class="container px-5">
                 <div class="row d-flex align-items-center">
                     <div class="col-lg-6">
-                        <h1 class="display-5 fw-bold my-3">Raih masa depanmu di Portal SNPMB</h1>
+                        <h1 class="display-5 fw-bold my-3">IX-14, SMP SUTOMO 1 MEDAN</h1>
                         <div class="row gap-3 gap-lg-0">
                             <div class="col-lg-12">
-                                <p class="lead">Belum memiliki akun SNPMB? Daftar segera di sini.</p>
-                                <a class="btn btn-primary px-4" href="https://reg-snpmb.bppp.kemdikbud.go.id/">Daftar</a>
+                                <p class="lead">T.P. 2022/2023</p>
+                                <a class="btn btn-primary px-4" style="text-decoration: none; size: 15px;" href="https://www.instagram.com/ix14.agenda/">
+                                    <i class="fa-brands fa-instagram"></i> @ix14.agenda
+                                </a>
                             </div>
-                            <div class="col-12 mt-2 d-lg-none">
-                                <hr class="my-0">
-                            </div>
-                            <div class="col-lg-12 d-lg-none">
-                                <p class="lead">Sudah memiliki akun SNPMB?</p>
-                                <a class="btn btn-outline-primary px-4" href="https://portal-snpmb.bppp.kemdikbud.go.id/dashboard">Masuk</a>
-                            </div>
+
                         </div>
                     </div>
                     <div class="col-lg-6 text-center d-none d-lg-inline-flex justify-content-center">
-                        <img src="https://portal-snpmb.bppp.kemdikbud.go.id/assets/media/img/illustration-landing.png" alt="landing-img" width="350"
-                             class="img-fluid">
+                        <img src="/a/icon.png" alt="Logo" width="200">
                     </div>
                 </div>
             </div>
         </section>
-        <section class="bg-light d-none">
-            <div class="container py-4 text-center">
-            </div>
-        </section>
-        <section class="border-top w-100">
-            <div class="container px-5 mt-5">
-                <div class="row">
-                    <div class="col-9 col-lg-11 mb-3">
-                        <h3>Pengumuman</h3>
-                    </div>
-                    <div class="col-lg-12 mt-10">
-                        <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <h5>Registrasi Akun SNPMB 2023</h5>
-                                    <p>Pembuatan Akun SNPMB bagi Sekolah dan Siswa dimulai pada 09 Januari 2023, pukul 15.00 WIB pada laman <a href="https://portal-snpmb.bppp.kemdikbud.go.id">Portal SNPMB</a>.</p>
-                                    <p>Sekolah dan Siswa yang sudah mengikuti uji coba kedua/lanjutan pembuatan Akun SNPMB dan berhasil, tidak perlu membuat akun SNPMB lagi.</p>
-                                    <p>Pembuatan Akun SNPMB berakhir pada: 09 Februari 2023 bagi Sekolah, dan 15 Februari 2023 bagi Siswa.</p>
-                                    <p>Terima kasih</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <footer class="footer mt-auto py-3 bg-light border-top">
-            <div class="container px-5">
-                <p class="m-0 text-muted">
-                    &copy; 2023 Balai Pengelolaan Pengujian Pendidikan. <em>v1.0.2p</em>.
-                    <a href="https://storyset.com/online" class="text-muted text-decoration-none">Ilustrasi oleh Storyset</a>.
-                </p>
-            </div>
-        </footer>
 
         <!--=============== Script ===============-->
         <script src="https://portal-snpmb.bppp.kemdikbud.go.id/assets/plugins/bootstrap5/js/bootstrap.bundle.min.js"></script>
