--- a/home.html
+++ b/home.html
@@ -55,18 +55,29 @@
                         <h1 class="display-5 fw-bold my-3">IX-14, SMP SUTOMO 1 MEDAN</h1>
                         <div class="row gap-3 gap-lg-0">
                             <div class="col-lg-12">
-                                <p class="lead">T.P. 2022/2023</p>
-                                <a class="btn btn-primary px-4" style="text-decoration: none; size: 15px;" href="https://www.instagram.com/ix14.agenda/">
-                                    <i class="fa-brands fa-instagram"></i> @ix14.agenda
-                                </a>
-                            </div>
 
+                                <div class="d-flex flex-column flex-md-row gap-3">
+                                    <i><p>T.P. 2022/2023</p></i>
+                                    <a class="btn btn-outline-dark" href="https://www.instagram.com/ix14.agenda/">
+                                        <i class="fa-brands fa-instagram"></i> @ix14.agenda
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6 text-center d-none d-lg-inline-flex justify-content-center">
                         <img src="/a/icon.png" alt="Logo" width="200">
                     </div>
                 </div>
+                <br>
+                <div class="d-flex flex-column flex-md-row gap-3">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2pxdURK81sd9bcTess29jO?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+                    <br></br>
+
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6NCZrmItBP2jsFOXUGGKqP?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
+
             </div>
         </section>
 
