--- a/home.html
+++ b/home.html
@@ -73,9 +73,7 @@
                 <div class="d-flex flex-column flex-md-row gap-3">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2pxdURK81sd9bcTess29jO?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-                    <br></br>
-
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6NCZrmItBP2jsFOXUGGKqP?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1O0LFU0sYFJK3UtQrL0sDM?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
 
             </div>
