--- a/404.html
+++ b/404.html
@@ -1,113 +1,106 @@
-<html lang='en'>
-    <head>
-        <meta charset='UTF-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-        <meta property='og:site_name' content='404 - IX 14'/>
-        <meta property='og:type' content='website'/>
-        <meta property='og:image' content='https://ix14.netlify.app/a/card.png'/>
-        <meta property='og:image:type' content='image/png'/>
-        <meta property='og:image:width' content='1280'/>
-        <meta property='og:image:height' content='800'/>
-        <meta property='twitter:card' content='summary_large_image' />
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:site_name" content="Home - IX 14" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://ix14.netlify.app/a/card.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="800" />
+    <meta property="twitter:card" content="summary_large_image" />
 
-        <!--=============== FAVICON ===============-->
-        <link rel='shortcut icon' href='a/icon.png' type='image/x-icon'>
+    <!--=============== FAVICON ===============-->
+    <link
+      rel="shortcut icon"
+      href="https://ix14.netlify.app/a/icon.png"
+      type="image/x-icon"
+    />
 
-        <!--=============== REMIX ICONS ===============-->
-        <link href='https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css' rel='stylesheet'>
+    <!--=============== REMIX ICONS ===============-->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
-        <!--=============== CSS ===============-->
-        <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor' crossorigin='anonymous'>
+    <!--=============== CSS ===============-->
+    <link rel="stylesheet" href="assets/css/main-page.css" />
 
-        <!--=============== TITLE ===============-->
-        <title>404 - IX 14</title> 
+    <!--=============== TITLE ===============-->
+    <title>404 • IX-14</title>
 
-        <!--=============== FONT ===============-->
-        <link rel='preconnect' href='https://fonts.gstatic.com'>
-        <link href='https://fonts.googleapis.com/css?family=Raleway:100,600' rel='stylesheet'>
+    <!--=============== FONT ===============-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:100,600"
+      rel="stylesheet"
+    />
   </head>
-  <style>
-    html, body {
-      background-color: #fff;
-      color: #636b6f;
-      font-family: Courier New;
-      font-weight: 100;
-      height: 99vh;
-      margin: 10;
-    }
-
-    .full-height {
-      height: 99vh;
-    }
-
-    .flex-center {
-      align-items: center;
-      display: flex;
-      justify-content: center;
-    }
-
-    .position-ref {
-      position: relative;
-    }
-
-    .top-right {
-      position: absolute;
-      right: 10px;
-      top: 18px;
-    }
-
-    .content {
-      text-align: center;
-    }
-
-    .title {
-      font-size: 64px;
-    }
-
-    .links > a {
-      color: #636b6f;
-      padding: 0 25px;
-      font-size: 19px;
-      font-weight: 600;
-      letter-spacing: .1rem;
-      text-decoration: none;
-      text-transform: uppercase;
-    }
-
-    .m-b-md {
-      margin-bottom: 30px;
-    }
-    .h5{
-      font-size: 15px;
-    }
-  </style>
-<body>
-  <div class='flex-center position-ref full-height'>
-    <div class='content'>
-      <div class='title m-b-md'>
-        <h1>404 - Page Not Founds</h1>
-        <h5 class='h5'>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</h5>
-        <h6>You can return to home by pressing <code>Back To Home Page</code> button.</h6>
-        <div class='d-grid gap-2 col-6 mx-auto'>
-            <a href='https://ix14.netlify.app/home' class='btn btn-outline-dark' role='button'>Back To Home Page</a>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
+          <!-- Header -->
+            <header id="header">
+              <center>
+                <img style="max-width: 200px; max-height: 100px;" src="Logo Files/For Web/png/Color logo - no background.png" alt="IX-14 Logo" />
+              </center>
+            </header>
+          
+          <!-- Banner -->
+          <section>
+            <header class="major">
+            <h2>Sorry, this page isn't available.</h2>
+            </header>
+            <p>
+              The link you followed may be broken, or the page may have been removed.
+                  <a
+                    href="https://ix14.netlify.app/home"
+                    class="btn btn-outline-dark"
+                    role="button"
+                    >Go back to home</a
+                  >.
+            </p>
         </div>
       </div>
-      <div class='links'>
-        <p>⇆ㅤ |◁ ㅤ❚❚ㅤ ▷| ㅤ↻ </p>
-        <p>Dev by Oxa<img src='https://kkun.netlify.app/a/love.png' height='40'></p>
+
+      <!-- Sidebar -->
+      <div id="sidebar">
+        <div class="inner">
+          <!-- Menu -->
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul>
+              <li><a href="home">Homepage</a></li>
+              <li><a href="https://ix14.netlify.app/#intro">Intro</a></li>
+              <li><a href="https://ix14.netlify.app/#member">Member</a></li>
+              <li><a href="https://ix14.netlify.app/#spotify">Spotify</a></li>
+              <li><a href="https://www.instagram.com/ix14.agenda/" class="icon brands fa-instagram"
+                > Instagram</a
+              ></li>
+              
+            </ul>
+          </nav>
+
+          <!-- Footer -->
+          <footer id="footer">
+            <p class="copyright">
+              &copy; IX-14
+            </p>
+          </footer>
+        </div>
       </div>
     </div>
-  </div>
 
-      <!--=============== SCRIPT ===============-->
-      <script type='text/javascript'>
-        if (typeof document.onselectstart!='undefined') {
-            document.onselectstart=new Function ('return false');
-        }
-        else{
-            document.onmousedown=new Function ('return false');
-            document.onmouseup=new Function ('return true');
-        }
-      </script>
-</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main-page.js"></script>
+  </body>
 </html>
