--- a/cek-kas/index.html
+++ b/cek-kas/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:site_name" content="404 - IX 14" />
+    <meta property="og:site_name" content="Cek Kas - IX 14" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://ix14.netlify.app/a/card.png" />
     <meta property="og:image:type" content="image/png" />
@@ -11,20 +11,23 @@
     <meta property="twitter:card" content="summary_large_image" />
 
     <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="a/icon.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="https://ix14.netlify.app/a/icon.png"
+      type="image/x-icon"
+    />
 
     <!--=============== REMIX ICONS ===============-->
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css' rel='stylesheet'>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
     <!--=============== CSS ===============-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="assets/css/main-page.css" />
+
     <!--=============== TITLE ===============-->
-    <title>Cek Uang Kas - IX-14</title>
+    <title>Cek Kas • IX-14</title>
 
     <!--=============== FONT ===============-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -33,64 +36,104 @@
       rel="stylesheet"
     />
   </head>
-  <style>
-    /* Google Font Link */
-    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-    input[type="number"]::-webkit-outer-spin-button,
-    input[type="number"]::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
-  </style>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
+          <!-- Header -->
+          <header id="header">
+            <center>
+              <img
+                style="max-width: 200px; max-height: 100px"
+                src="Logo Files/For Web/png/Color logo - no background.png"
+                alt="IX-14 Logo"
+              />
+            </center>
+          </header>
 
-  <body>
-    <div class="col-lg-8 mx-auto p-3 py-md-5">
-      <nav class="navbar navbar-expand-lg fixed-top static-top">
-        <div class="container px-5">
-            <a class="navbar-brand" href="">
-                <p class="display-6 fw-bold my-3">IX-14</p>
-            </a>
+          <!-- Banner -->
+          <section>
+            <header class="major">
+              <h2>Sorry, this page isn't available.</h2>
+            </header>
+            <form onsubmit="handleSubmit(event)">
+              <div class="mb-3">
+                <label for="input-kelas" class="form-label">No Kelas:</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="input-kelas"
+                  placeholder="35"
+                  min="1"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="kelas" class="form-label">Kelas</label>
+                <select id="kelas" name="kelas" class="form-control">
+                  <option value="IX-14">IX-14</option>
+                </select>
+              </div>
+              <input
+                type="submit"
+                class="w-100 btn btn-primary"
+                id="submit"
+                name="submit"
+                value="CEK"
+              />
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+              <br /><br />
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <a class="display-7 my-3 ms-auto" style="color: black; text-decoration: none; size: 15px;">
-                    <i class="fa-brands fa-instagram" style="size: 200px;"></i> @ix14.agenda
-                </a>
-            </div>
+              <div class="alert alert-primary" role="alert">
+                <p>INFO:</p>
+                <hr />
+                <p id="warning">Belum Ada Status!</p>
+              </div>
+            </form>
+          </section>
         </div>
-    </nav>
+      </div>
 
-      <section class="py-5 mt-5">
-      <form onsubmit="handleSubmit(event)">
-        <div class="mb-3">
-          <label for="input-kelas" class="form-label">No Kelas:</label>
-          <input type="number" class="form-control" id="input-kelas" placeholder="35" min="1" required>
+      <!-- Sidebar -->
+      <div id="sidebar">
+        <div class="inner">
+          <!-- Menu -->
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul>
+              <li><a href="home">Homepage</a></li>
+              <li><a href="https://ix14.netlify.app/#intro">Intro</a></li>
+              <li><a href="https://ix14.netlify.app/#member">Member</a></li>
+              <li><a href="https://ix14.netlify.app/#spotify">Spotify</a></li>
+              <li>
+                <a
+                  href="https://www.instagram.com/ix14.agenda/"
+                  class="icon brands fa-instagram"
+                >
+                  Instagram</a
+                >
+              </li>
+            </ul>
+          </nav>
+
+          <!-- Footer -->
+          <footer id="footer">
+            <p class="copyright">&copy; IX-14</p>
+          </footer>
         </div>
-        <div class="mb-3">
-          <label for="kelas" class="form-label">Kelas</label>
-            <select id="kelas" name="kelas" class="form-control">
-              <option value="IX-14">IX-14</option>
-            </select>
-          </div>
-          <input type="submit" class="w-100 btn btn-primary" id="submit" name="submit" value="CEK">
+      </div>
+    </div>
 
-          <br><br>
-          
-          <div class="alert alert-primary " role="alert">
-            <p>INFO:</p>
-            <hr>
-            <p id="warning">Belum Ada Status!</p>
-          </div>
-        </div>
-      </form>
-
-      </section>
-  </div>
-        <script src="cek-kas.js"></script>
-        <script src="https://portal-snpmb.bppp.kemdikbud.go.id/assets/plugins/bootstrap5/js/bootstrap.bundle.min.js"></script>
-      </body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main-page.js"></script>
+    <script src="cek-kas.js"></script>
+  </body>
 </html>
